add lora trainer cog

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Eden
+lora
+vae_fixed
+.huggingface/
+
 # Initially taken from Github's Python gitignore file
 
 # Byte-compiled / optimized / DLL files
